src/components/Services/Services.scss
@use "../../partials/variables" as vars;
@use "../../partials/mixins" as mx;

.services {
	& {
		color: var(--text-color-bright);
		margin-inline: auto;
		max-width: vars.$ultraWide;
		text-align: center;
	}

	&__inner {
		left: 0;
		position: relative;
		top: 0;
		width: 100%;
	}

	&__bg--light.show {
		background: url("../../assets/images/day-bottom.webp") no-repeat center
			center;
		background-size: cover;
		@include mx.servicesBg;
	}

	&__bg--dark.show {
		border: 2px solid red;
		// background: url("../../assets/images/night-bottom.webp") no-repeat center
		// 	center;
		background: red;
		background-size: cover;
		@include mx.servicesBg;
	}

	&__overlay {
		background: var(--gradient-overlay);
		height: 100%;
		position: absolute;
		width: 100%;
		z-index: 1;
	}

	&__content {
		align-items: center;
		display: flex;
		flex-direction: column;
		height: 100%;
		justify-content: center;
		margin-inline: auto;
		max-width: vars.$largeTablet;
		padding-block: 3rem;
		padding-inline: 1rem;
		position: relative;
		z-index: 1;
	}

	&__heading {
		font-size: var(--headline-medium);
		letter-spacing: var(--letter-spacing-medium);
		margin-bottom: 3rem;
		position: relative;
		text-shadow: var(--text-shadow-bright);
		@include mx.headingGeneral;

		&::after {
			background: var(--text-color-bright);
			bottom: -1rem;
			@include mx.afterAccent;
		}
	}

	&__sub-heading {
		font-size: var(--headline-medium);
		margin-bottom: 2rem;
		text-align: center;
		text-shadow: var(--text-shadow-bright);

		@media (min-width: vars.$tablet) {
			text-align: start;
		}
	}

	&__lead {
		font-size: var(--headline-medium-small);
		font-weight: bold;
		letter-spacing: var(--letter-spacing-general);
		line-height: 1.25;
		margin-bottom: 3rem;
		text-align: center;
		text-shadow: var(--text-shadow-bright);
	}

	&__services-list {
		display: flex;
		flex-direction: column;
		gap: 3rem;
		margin-bottom: 1rem;
		text-shadow: var(--text-shadow-bright);

		@media (min-width: vars.$tablet) {
			display: grid;
			gap: 1.25rem;
			grid-template-columns: repeat(3, 1fr);
		}
	}

	&__item {
		align-items: center;
		display: flex;
		flex-direction: column;
	}

	&__service-icon {
		height: 2.75rem;
		margin-bottom: 2rem;
		width: 2.75rem;

		&--small {
			height: 3.25rem;
			margin-bottom: 1.5rem;
			width: 3.25rem;
		}
	}

	&__service-name {
		display: inline-block;
		font-size: var(--font-size-small);
		letter-spacing: var(--letter-spacing-general);
		margin-bottom: 3rem;
		position: relative;

		&::after {
			background: var(--text-color-bright);
			bottom: -1rem;
			@include mx.afterAccent;
		}
	}

	&__service-description {
		font-size: var(--font-size-xs);
		letter-spacing: var(--letter-spacing-general);
		line-height: var(--line-height-medium);
		text-shadow: var(--text-shadow-bright);
	}
}

